# fairplay

./: .dockerignore  CHANGES.rst  Dockerfile  LICENSE  README.md  docker-compose.yml  flask_scramp.py  package.json  pyproject.toml  requests_scram.py  requirements.txt  share.py  zshare.py
artwork/: LICENSE
dev/: requirements.txt
docker/: docker-entrypoint.sh
docs/: conf.py  index.rst  license.rst  requirements.txt
docs/_static/: algolia.js
fairplay/: __init__.py  __main__.py  app.py  assets.py  assets.yml  audit.py  cache.py  cli.py  config.py  db.py  default_settings.py  default_settings.toml  i18n.py  manifest.json
fairplay/admin/: routes.py
fairplay/admin/templates/admin/: account_selector.html  audit-event.html  audit-events.html  base.html  console.html  form.html  header.html  list.html
fairplay/admin/templates/admin/widgets/: date.html  user.html
fairplay/admin/utils/: pagination.py
fairplay/admin_old/: __init__.py  routes.py
fairplay/admin_old/templates/admin/: audit-event.html  audit-events.html  base.html  index.html  list.html
fairplay/admin_old/templates/admin/widgets/: date.html  remote_addr.html
fairplay/api/: __init__.py  courses.py  games.py  holes.py  players.py  user.py  users.py  v1.py
fairplay/api/utils/: __init__.py  conditional.py  filtering.py  ordering.py  pagination.py
fairplay/auth/: __init__.py  admin.py  decorators.py  manager.py  models.py  routes.py  totp.py  utils.py
fairplay/auth/templates/admin/auth/: audit-event.html  audit-events.html  audit-list.html  user.html  users.html
fairplay/auth/templates/auth/: base.html  login.html
fairplay/cli/: __init__.py  users.py  utils.py
fairplay/courses/: __init__.py  admin.py  api.py  models.py
fairplay/courses/templates/admin/courses/: course.html  courses.html  feature.html  features.html  hole.html  holes.html
fairplay/games/: __init__.py  admin.py  api.py  models.py  web.py
fairplay/games/templates/web/games/: map.html
fairplay/migrations/: env.py  script.py.mako
fairplay/migrations/versions/: 0bf832bfd8a0_.py  49145e2bbcd7_.py  4994ce48a754_.py  711ed2658175_.py  9429ea250104_.py  a2392ec04c5c_.py  b4682cdc3418_.py  eeb6c86597af_.py
fairplay/models/: __init__.py  course.py  game.py  hole.py  player.py
fairplay/players/: __init__.py  admin.py  api.py  models.py
fairplay/players/templates/admin/players/: player.html  players.html
fairplay/static/src/js/: confirm.js  editor.js  icons.js  index.js  map.js  notifications.js  payment.js  recorder.js  table.js  time.js
fairplay/static/src/scss/: _code.scss  _editor.scss  _forms.scss  _maps.scss  _variables.scss  index.scss
fairplay/templates/: base-fullscreen.html  base-snippet.html  base.html
fairplay/templates/widgets/: form.html  toast.html
fairplay/utils/: datetime.py  db.py  decimal.py  geoip.py  htmx.py  passlib.py  requests.py  security.py  web.py
tests/: conftest.py  requirements.txt
typing/: requirements.txt
