[project]
name = "FairPlay"
description = "Golf course play management system."
readme = "README.md"
license = { text = "MIT" }
authors = [{name = "Michael de Villiers", email = "michael@devilears.co.za"},]
maintainers = [{name = "Michael de Villiers", email = "michael@devilears.co.za"},]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]
requires-python = ">= 3.7"
dependencies = [
    "click ~= 8.1.3",
]

[project.scripts]
fairplay = "fairplay.cli:main"

[project.urls]
Documentation = "https://fairplay.readthedocs.io/"
Changes = "https://fairplay.readthedocs.io/changes/"
"Source Code" = "https://github.com/fairplay/fairplay/"
"Issue Tracker" = "https://github.com/fairplay/fairplay/issues/"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "pre_commit ~= 2.21.0",
    "pydocstyle",
    "reorder-python-imports",
    "fairplay[test]",
]
docs = [
    "furo == 2022.12.7",
    "setuptools_scm ~= 7.1.0",
    "sphinx_issues ~= 3.0.1",
    "sphinx ~= 5.3.0",
]
test = [
    "pytest ~= 7.2.0",
    "pytest-cov ~= 4.0.0",
    "pytest-mock ~= 3.10.0",
    "pytest-skip-slow == 0.0.3"
]

[build-system]
requires = ["setuptools >= 64.0", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
force-exclude = '''
(
  /venv/
)
'''
line-length = 79
target-version = ['py37']

[tool.coverage.run]
source = ["fairplay"]

[tool.pytest.ini_options]
addopts = "--cov=fairplay/ --cov-report html --cov-report term-missing"
markers = [
    "slow: tests that are slow",
    "integration: integration tests that require external tools",
]

[tool.setuptools]
packages = ["fairplay"]

[tool.setuptools_scm]
write_to = "fairplay/_version.py"
