[project]
name = "fairplay"
description = "An AI product and marketing enrichment service."
readme = "README.md"
license = { text = "MIT" }
authors = [{name = "Michael de Villiers", email = "michael@devilears.co.za"},]
maintainers = [{name = "Michael de Villiers", email = "michael@devilears.co.za"},]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = []

[project.scripts]
fairplay = "fairplay.cli:main"

[project.urls]
Homepage = "https://github.com/fairplay-ai/fairplay/"
Documentation = "https://fairplay.readthedocs.io/"
Changes = "https://fairplay.readthedocs.io/en/latest/changelog.html"
"Source Code" = "https://github.com/fairplay-ai/fairplay/"
"Issue Tracker" = "https://github.com/fairplay-ai/fairplay/issues/"

[build-system]
requires = [
    "setuptools>=64.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = [".github", "tests"]
skips = ["B101"]

[tool.black]
force-exclude = '''
(
  /venv/
)
'''
line-length = 88
target-version = ['py38']

[tool.coverage.run]
source = ["fairplay"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: nocover",

    # Don't complain about type checking code not run
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if app\\.debug",
    "if current_app\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
    "*/__main__.py",
    "*/_version.py",
]

[tool.curlylint]
include = '\.(html|jinja|txt)$'
# For jinja's i18n extension:
template_tags = [['trans', 'pluralize', 'endtrans']]

[tool.flake8]
ignore = ['B010', 'E203', 'W503']
max-line-length = 88
count = true

[tool.isort]
profile = 'black'
line_length = 88
lines_between_types = 1
multi_line_output = 3
combine_as_imports = true
known_first_party = ['fairplay', 'tests']

[tool.mypy]
python_version = '3.11'
exclude = 'fairplay/migrations'

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "bleach",
    "boto3",
    "dotenv",
    "dynaconf",
    "dynaconf.cli",
    "flask_babel",
    "flask_cdn",
    "flask_login",
    "flask_login.signals",
    "flask_minify",
    "flask_rq2",
    "flask_sock",
    "flask_socketio",
    "flask_wtf",
    "flask_wtf.csrf",
    "flask_wtf.recaptcha",
    "is_safe_url",
    "jsonrpc.backend.flask",
    "openai",
    "smart_open",
    "sqlalchemy_utils",
    "webauthn",
    "whitenoise",
    "wtforms",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=fairplay/ --cov-report=term-missing:skip-covered"
filterwarnings = "ignore::DeprecationWarning:flask_wtf.recaptcha.widgets:"
markers = [
    "slow: tests that are slow",
    "integration: integration tests that require external tools",
]
mocked-sessions = "fairplay.db.db.session"

[tool.setuptools.packages.find]
include = ["fairplay*"]

[tool.setuptools_scm]
write_to = "fairplay/_version.py"

[tool.towncrier]
package = "fairplay"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/template.md"
title_format = "## [{version}](https://github.com/fairplay-ai/fairplay/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/fairplay-ai/fairplay/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
